--- a/src/app/blog/post-view/post-view.component.html
+++ b/src/app/blog/post-view/post-view.component.html
@@ -1,7 +1,18 @@
-<h4>
-    {{ post.name }}
-</h4>
-{{ post | json }}
-
-<button class="btn btn-primary" (click)="likePost(post.id)">Like</button>
-<button class="btn btn-danger" (click)="deletePost(post.id)">Delete</button>
+<div class="card">
+    <div class="card-header">
+        {{ post.name }}
+        <span class="text-right">{{ post.updatedAt | date: "short" }}</span>
+    </div>
+    <img class="card-img-top" [src]="post.image" alt="Post image" />
+    <div class="card-body">
+        <p>{{ post.id }}</p>
+        <p class="card-text">{{ post.content }}</p>
+    </div>
+    <div class="card-footer text-muted">
+        <button class="btn btn-sm btn-outline-primary" (click)="likePost(post.id)">{{ post.likes }} Like</button>
+        <button class="btn btn-sm btn-outline-danger" (click)="deletePost(post.id)">Delete</button>
+        <br />
+        <h5>Comments</h5>
+        <app-comment-list [postId]="post.id"></app-comment-list>
+    </div>
+</div>
