main components updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h4>App Component</h4>
-<router-outlet></router-outlet>
+<div class="container">
+    <h4 class="text-center">{{ title }}</h4>
+    <router-outlet></router-outlet>
+</div>
