post image upload to a variable and show directly successfully worked

--- a/src/app/blog/post-add-edit/post-add-edit.component.html
+++ b/src/app/blog/post-add-edit/post-add-edit.component.html
@@ -35,8 +35,8 @@
                             id="post-image"
                             placeholder="Select the post image"
                             aria-describedby="post-image-help"
-                            accept="image"
-                            formControlName="image"
+                            accept="image/*"
+                            (change)="onFileChange($event)"
                         />
                         <div *ngIf="image?.touched && image?.errors" class="text-danger">
                             <small *ngIf="image?.hasError('required')">Image is required</small>
