few css enhancement - comment add form alaignment - like and delete button gap - post id removed from post view - post and comment time view change - post-view card footer text color change

--- a/src/app/blog/comment-view/comment-view.component.html
+++ b/src/app/blog/comment-view/comment-view.component.html
@@ -3,13 +3,11 @@
         <!-- <small class="text-muted">id : {{ comment.id }}</small> <br />
         <small class="text-muted">post id : {{ comment.postId }}</small> <br />
         <small class="text-muted">parent comment id : {{ comment.parentCommentId }}</small> <br /> -->
-        <small> {{ comment.updatedAt | date: 'short'}} </small>
+        <small style="font-size: 12px"> {{ comment.updatedAt | date: "short" }} </small>
         <p class="card-text">{{ comment.content }}</p>
-        <button class="btn btn-sm btn-outline-primary" (click)="likeComment(comment.id)">
+        <button class="btn btn-sm btn-outline-primary me-2" (click)="likeComment(comment.id)">
             {{ comment.likes }} Like
         </button>
-        <button class="btn btn-sm btn-outline-danger" (click)="deleteComment(comment.id)">
-            Delete
-        </button>
+        <button class="btn btn-sm btn-outline-danger" (click)="deleteComment(comment.id)">Delete</button>
     </div>
 </div>
