--- a/src/app/blog/comment-add-edit/comment-add-edit.component.html
+++ b/src/app/blog/comment-add-edit/comment-add-edit.component.html
@@ -1,15 +1,15 @@
-<div>
-    <form (ngSubmit)="addComment(comment)" #form="ngForm">
-        <div class="form-group">
+<div class="my-1">
+    <form (ngSubmit)="addComment(comment)" #form="ngForm" class="row g-2">
+        <div class="form-group col-10">
             <input
                 type="text"
                 [(ngModel)]="comment"
-                class="form-control"
+                class="form-control form-control-sm"
                 name="comment-input-id"
                 id="comment-input-id"
                 placeholder="Input your comment"
             />
         </div>
-        <button type="submit" class="btn btn-sm btn-outline-primary" [disabled]="!comment">Comment</button>
+        <button type="submit" class="btn btn-sm btn-outline-primary col-2" [disabled]="!comment">Comment</button>
     </form>
 </div>
