--- a/src/app/blog/post-view/post-view.component.html
+++ b/src/app/blog/post-view/post-view.component.html
@@ -1,15 +1,14 @@
-<div class="card">
+<div class="card mt-1 mb-2">
     <div class="card-header">
-        {{ post.name }}
-        <span class="text-right">{{ post.updatedAt | date: "short" }}</span>
+        <span class="text-start"> {{ post.name }} </span>
+        <small class="text-end" style="font-size: 12px">{{ post.updatedAt | date: "short" }}</small>
     </div>
     <img class="card-img-top p-3" [src]="post.image" alt="Post image" />
     <div class="card-body">
-        <p>{{ post.id }}</p>
         <p class="card-text">{{ post.content }}</p>
     </div>
-    <div class="card-footer text-muted">
-        <button class="btn btn-sm btn-outline-primary" (click)="likePost(post.id)">{{ post.likes }} Like</button>
+    <div class="card-footer">
+        <button class="btn btn-sm btn-outline-primary me-2" (click)="likePost(post.id)">{{ post.likes }} Like</button>
         <button class="btn btn-sm btn-outline-danger" (click)="deletePost(post.id)">Delete</button>
         <br />
         <h5>Comments</h5>
